Fixes horizontal overflow on small screens

--- a/sass/amaury-carrade/page/_content.scss
+++ b/sass/amaury-carrade/page/_content.scss
@@ -589,6 +589,11 @@
                     top: 0;
                     right: -2rem;
 
+                    // Fixes horizontal overflow on small screens
+                    @include mobile {
+                        right: -1rem;
+                    }
+
                     display: inline-block;
                     padding: 3px .4em 6px .8em;
 
